# -fby-cjs-jmy

MotoEngine/: .req-motoengine.txt  Question.md  README.md  pyproject.toml  一键启动脚本.bat
MotoEngine/motoengine/: .env  __init__.py  __main__.py  config.py
MotoEngine/motoengine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
MotoEngine/motoengine/db/chat_history/: ecfdb678-c022-4b66-88e2-0e7cc41b10bf.json
MotoEngine/motoengine/db/chat_history/4bca6b2e-ed8f-4ffc-89e4-4db112d99935/: agent_history.json
MotoEngine/motoengine/db/chat_history/c8539f11-92bc-4ead-ab7d-504ac74abffc/: agent_history.json
MotoEngine/motoengine/db/chroma/: chroma.sqlite3
MotoEngine/motoengine/func/: __init__.py  chat_memory.py  chat_storage.py  document_vector.py  embedding.py  manual_splitter.py  moto_agent.py  moto_rag.py  streaming_llm.py  workflow.py
MotoEngine/motoengine/models/: __init__.py  admin.py  chatmodel.py  sse.py
MotoEngine/motoengine/route/: __init__.py  admin_router.py  chat_router.py  health.py
MotoEngine/motoengine/templates/: index.html
MotoEngine/motoengine/templates/admin/: app.js  index.html  style.css
MotoEngine/motoengine/templates/agent/: app.js  index.html  style.css
MotoEngine/motoengine/templates/manual/: index.html
MotoEngine/motoengine/utils/: __init__.py  config.py
MotoEngine/test/: test_chat_memory.py  test_docvector.py  test_embedding.py  test_manualsplitter.py  test_moto_agent.py  test_moto_rag.py  test_streaming_llm.py  test_workflow.py
(+1 files in other folders)
