[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motoengine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "chromadb",
  "click>=8.3.1",
  "dashscope",
  "fastapi==0.128.0",
  "grpcio",
  "hnswlib>=0.8.0",
  "jinja2==3.1.6",
  "langchain==1.2.7",
  "langchain-chroma>=1.1.0",
  "langchain-community==0.4.1",
  "langchain-core==1.2.17",
  "langchain-openai==1.1.7",
  "langchain-text-splitters==1.1.1",
  "numpy>=2.4.4",
  "onnxruntime",
  "openai==2.16.0",
  "overrides",
  "posthog>=7.9.12",
  "pydantic",
  "pypdf==6.6.2",
  "pypika>=0.51.1",
  "python-dotenv==1.2.2",
  "sse-starlette==3.2.0",
  "tokenizers>=0.22.2",
  "uvicorn==0.40.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["motoengine*"]
